# cicd-azure

./: .gitignore  docker-compose.yml  readme.md  steg_simulation.xlsx  temp.txt
misc/: CV_SZ.docx  contrat_bail_borj_cedria.docx  expose_tunisie.pptx  meriem_dimessi_profile_summary.txt  misc - Shortcut.lnk
misc/Nouveau dossier/: FIS Tunis_Exit Checklist_Sofien Zairi.docx  biat.7z  biat.txt  compensation.7z  edge_favorites_07_09_2025.html
misc/Nouveau dossier/AI_CoP_MINA/: ai_deas_for cop_community.txt  knowledge_sharing_template.txt
misc/Nouveau dossier/Assurance Carte -- March/: Employé informations_.xlsx
misc/Nouveau dossier/adam/: Carnet_De_lecteur_omelette_au_sucre.pptx  adam.html  carnet_de_lecteur_une_soupe_de_diamants.pptx  english_presentation.pptx
misc/Nouveau dossier/candidates_interviews/: candidates_evaluation.xlsx  candidates_evaluation_backup_from_sz_drive.xlsx  candidates_evaluation_orig.xlsx  candidates_evaluation_orig_2.xlsx
misc/Nouveau dossier/father/: hiospitalisation_a_domicile.xlsx  lasilix_administration.xlsx  ~$NTRAT DE LOCATION_dokken_rue_el_makhtar.docx
misc/Nouveau dossier/finance/: 2018 Personal Taxation - Simulator - with Bonus.xlsx  2019_Personal Taxation - Simulator.xlsx  2020_Personal Taxation - Simulator - 2020.xlsx  2021_Personal Taxation - Simulator.xlsx  Simulateur Fidelity plan.xlsx  checks_debts_and_landed.xlsx  house_costs.xlsx  lm.xlsx  micro_badget.xlsx  micro_badget_2017.xlsx  (+1 more)
misc/Nouveau dossier/learn-chat-gpt/gpt_chat_bot/: README.md  gpt_client_app.ipynb  pyproject.toml  test_export.py
(+1261 files in other folders)
